--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,8 +27,7 @@ archives:
     files:
       - LICENSE
       - README.md
-      - src: '.yip.template.json'
-        dst: '.yip.json'
+      - .yip.json
 checksum:
   name_template: 'checksums.txt'
 snapshot:
